# nocy-wallet-indexer

./: .gitignore  LICENSE  README.md
sidecar/: API.md  AUDIT.md  Cargo.toml
sidecar/src/: config.rs  db.rs  feed.rs  graphql_ws.rs  lib.rs  main.rs  merkle_cache.rs  metrics.rs  schema.rs
sidecar/src/routes/: feed.rs  mod.rs  session.rs  subscribe.rs  zswap.rs
sidecar/tests/: integration_tests.rs
tests/integration/: sidecar-sync.test.ts
tests/unit/: config_tests.rs  error_tests.rs  feed_tests.rs  sequence_tests.rs
